After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 609522 - [recorder] Fix recording when pipeline is not set
[recorder] Fix recording when pipeline is not set
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2010-02-10 11:06 UTC by drago01
Modified: 2010-02-10 12:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[recorder] Fix recording when pipeline is not set (1.48 KB, patch)
2010-02-10 11:07 UTC, drago01
none Details | Review
[recorder] Fix recording when pipeline is not set (1.56 KB, patch)
2010-02-10 11:23 UTC, drago01
none Details | Review
[recorder] Fix recording when pipeline is not set (1.57 KB, patch)
2010-02-10 11:24 UTC, drago01
none Details | Review
[recorder] Fix recording when pipeline is not set (1.58 KB, patch)
2010-02-10 11:42 UTC, drago01
none Details | Review
Fix annotation of shell_recorder_set_pipeline() (1.20 KB, patch)
2010-02-10 11:51 UTC, Florian Müllner
committed Details | Review

Description drago01 2010-02-10 11:06:59 UTC
The recorder fails with an exception when the pipeline is not set
(or set to an empty value) in gconf, fix this passing '' instead of null
and make recorder_set_pipeline default to DEFAULT_PIPELINE in this case.
Comment 1 drago01 2010-02-10 11:07:41 UTC
Created attachment 153405 [details] [review]
[recorder] Fix recording when pipeline is not set
Comment 2 drago01 2010-02-10 11:23:33 UTC
Created attachment 153406 [details] [review]
[recorder] Fix recording when pipeline is not set

Fix memory leak
Comment 3 drago01 2010-02-10 11:24:47 UTC
Created attachment 153407 [details] [review]
[recorder] Fix recording when pipeline is not set

Fix typo
Comment 4 drago01 2010-02-10 11:42:48 UTC
Created attachment 153408 [details] [review]
[recorder] Fix recording when pipeline is not set

Fix another small leak.
Comment 5 Florian Müllner 2010-02-10 11:51:34 UTC
Created attachment 153410 [details] [review]
Fix annotation of shell_recorder_set_pipeline()

There are two minor errors here: the documented parameter name does not
match the real one, and there should be an (allow-none) annotation.

With this patch, main.js can be left unmodified.
Comment 6 drago01 2010-02-10 12:05:32 UTC
Review of attachment 153410 [details] [review]:

With this patch we don't need any other changes and it is an obvious fix.

Remove the "With this patch, main.js can be left unmodified." from the commit message and commit.
Comment 7 Florian Müllner 2010-02-10 12:09:02 UTC
Attachment 153410 [details] pushed as 36e761b - Fix annotation of shell_recorder_set_pipeline()